fixed button box spacing

--- a/wdd130/toddshobbyhideout/styles/styles.css
+++ b/wdd130/toddshobbyhideout/styles/styles.css
@@ -87,6 +87,7 @@ h2 {
 #hero-box{
     display: grid;
     grid-template-columns: 1fr 2fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
     
     z-index: 0;
     grid-column: 2/3;
@@ -94,9 +95,10 @@ h2 {
 
 }
 #hero-text-box {
+    grid-row: 2/3;
     grid-column: 2/3;
     margin: 0 auto;
-    margin-top: 175px;
+    
 }
 #hero-box p {
     
